<resources>
    <string name="app_name">Fortnite app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_name">Home</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="date">Release Date:</string>
    <string name="description">Description:</string>
    <string name="gameType">Game Type:</string>
    <string name="ratingType">Rating Type:</string>
    <string name="minPlayers">Min Players:</string>
    <string name="maxPlayers">Max Players:</string>
    <string name="maxTeams">Max Teams:</string>
    <string name="maxTeamSize">Max Team Size:</string>
    <string name="maxSquads">Max Squads:</string>
    <string name="maxSquadSize">Max Squad Size:</string>
    <string name="isTournament">Tournament:</string>
    <string name="isLimitedTimeMode">Limited Time:</string>
    <string name="rarity">Rarity:</string>
    <string name="item_type">Item Type</string>

    <string name="title_home">Home</string>
    <string name="game_mode">Game Mode</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>
    <string name="cosmetics">Cosmetics</string>
    <string name="popup_menu_name">alphabetically</string>
    <string name="popup_menu_date">date</string>
    <string name="popup_menu_rarity">Rarity</string>
    <string name="popup_menu_default">Default</string>
    <string name="popup_menu_last">Last</string>
    <string name="search">search</string>
    <string name="news">News</string>
    <string name="account">Account</string>
    <string name="pleas_enter_the_account_name">Pleas enter the account name</string>
    <string name="shared_preferences_account_name">name</string>
</resources>