<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_action"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|withText"
        app:actionViewClass="android.widget.SearchView"
/>

    <item
        android:id="@+id/option_1"
        android:icon="@drawable/ic_sort_alphabetically"
        android:title="@string/popup_menu_name" />
    <item
        android:id="@+id/option_2"
        android:icon="@drawable/ic_sort_by_date"
        android:title="@string/popup_menu_date" />
    <item
        android:id="@+id/option_3"
        android:icon="@drawable/ic_sort_by_default"
        android:title="@string/popup_menu_default" />

</menu>